# muffin

./: .buildinfo  .buildinfo.bak  .bumpversion.cfg  .coveragerc  .git-commits.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .vimrc  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  Changelog  LICENSE  MANIFEST.in  MIGRATION_33-40.md  Makefile  Procfile  README.md  README.rst  api.html  cli.html  configuration.html  deploy.html  genindex.html  index.html  objects.inv  plugins.html  py-modindex.html  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  testing.html  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  code_of_conduct.md  codeowners  contributing.md  dependabot.yml  security.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  publish.yml  release.yml  tests.yml
_sources/: api.rst.txt  cli.rst.txt  configuration.rst.txt  deploy.rst.txt  index.rst.txt  testing.rst.txt  usage.rst.txt
_static/: documentation_options.js  pygments.css  theme.css
docs/: MIGRATION_33-40.md  api.rst  cli.rst  conf.py  configuration.rst  index.rst  installation.rst  plugins.rst  quickstart.rst  requirements.txt  testing.rst  usage.rst
docs/static/: theme.css
docs/templates/: custom-sidebar.html  layout.html
example/: __init__.py  admin.py  app.py  config.py  manage.py  models.py  tests.py  views.py
example/config/: debug.py  production.py  tests.py
example/migrations/: 000_initial.py  001_auto.py  001_data.py  002_data.py
example/static/: app.css
example/templates/: base.html  base.jade  index.html  index.jade  navbar.html  navbar.jade  profile.html  profile.jade
muffin/: __init__.py  _types.py  app.py  constants.py  errors.py  handler.py  manage.py  plugin.py  plugins.py  pytest.py  secure.py  types.py  typing.py  urls.py  utils.py  worker.py
muffin/plugins/: __init__.py  jade.py  manage.py  peewee.py  session.py
muffin/plugins/peewee/: __init__.py  migrate.py  migration.tmpl  other.py  serialize.py
requirements/: requirements-build.txt  requirements-dev.txt  requirements-standard.txt  requirements-tests.txt  requirements.txt
tests/: __init__.py  app.py  appcfg.py  config_fixture.py  conftest.py  test_application.py  test_base.py  test_commands.py  test_example.py  test_examples.py  test_handler.py  test_handlers.py  test_manage.py  test_models.py  test_muffin.py  test_peewee.py  test_plugin.py  test_plugins.py  test_pytest.py  test_secure.py  test_tests.py  test_urls.py  test_utils.py
tests/common/: conftest.py  test_application.py  test_background.py  test_handler.py  test_manage.py  test_plugin.py
