[project]
name = "muffin"
version = "1.4.1"
description = "Muffin is a fast, simple and asyncronous web-framework for Python 3 (asyncio, trio, curio)"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
keywords = ["asgi", "web", "web framework", "asyncio", "trio", "curio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = ["asgi-tools>=1.3.3,<2", "modconfig>=1,<2", "ujson"]

[project.optional-dependencies]
standard = ["gunicorn>=20.1.0,<21", "uvicorn[standard]>=0.21.1,<0.22"]

[project.urls]
Homepage = "https://github.com/klen/muffin"
Repository = "https://github.com/klen/muffin"
Documentation = "https://klen.github.io/muffin"
changelog = "https://raw.githubusercontent.com/klen/muffin/master/CHANGELOG.md"

[project.scripts]
muffin = "muffin.manage:cli"

[project.entry-points.pytest11]
muffin_pytest = "muffin.pytest"

[dependency-groups]
dev = [
  "aiofile",
  "pytest",
  "ruff",
  "pytest-aio[curio, trio, uvloop]",
  "pre-commit",
  "pyrefly>=0.52.0",
  "ipdb",
  "uvicorn",
]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-copybutton"]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.hatch.build.targets.sdist]
include = ["muffin"]

[tool.hatch.build.targets.wheel]
include = ["muffin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-xsvl"
muffin_app = "tests:app"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "example"]

[tool.pyrefly]
project-includes = ["muffin"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "N804",
  "COM",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ARG",
  "TRY",
  "F",
  "PGH",
  "PLR",
  "PLW",
  "PTH",
  "SIM",
  "RET504",
  "T20",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py310,py311,py312,py313,py314,pypy311

[testenv]
allowlist_externals = uv
commands_pre =
    uv sync
commands =
    uv run pytest tests --import-mode importlib
"""

[tool.bumpversion]
current_version = "1.4.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
