[wheel]
python-tag = py3

[metadata]
name = muffin
version = attr: muffin.__version__
url = https://github.com/klen/muffin
description = Muffin is a fast, simple and asyncronous web-framework for Python 3 (asyncio, trio)
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, asgi, trio, web
project_urls = 
    Documentation = https://klen.github.io/muffin
    Source code = https://github.com/klen/muffin
    Issue tracker = https://github.com/klen/muffin/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: AsyncIO
    Framework :: Trio

[options]
packages = muffin
python_requires = >= 3.7
include_package_data = True

[options.package_data]
muffin = 
    py.typed

[options.entry_points]
console_scripts = 
    muffin = muffin.manage:cli
pytest11 = 
    muffin_pytest = muffin.pytest

[tool:pytest]
addopts = -xsv
muffin_app = tests.app:app

[pylama]
linters = pylint,mypy

[pylama:pylint]
ignore = C0415

[pylama:tests/*]
ignore = D,W,R

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py37,py38,py39,py310,pypy37

[testenv]
deps = -e .[tests]
commands = 
    pytest --mypy tests

[testenv:pypy37]
commands = 
	pytest tests
